Remove section menu

--- a/themes/cifq/pages/home.htm
+++ b/themes/cifq/pages/home.htm
@@ -118,17 +118,14 @@ function onStart()
     <div class="home__main-menu">
         <div class="container">
             <div class="row">
-                <div class="grid-fourth">
+                <div class="grid-third">
                     <a class="home-cta" id="faq" href="{{ 'faq'|page }}">{{ '<span>Grands espaces</span><br class="ohhh"><span>Grandes questions</span>'|_ }}</a>
                 </div>
-                <div class="grid-fourth">
+                <div class="grid-third">
                     <a class="home-cta" id="possibilities" href="{{ 'possibilities'|page }}">{{ '<span>Regard sur</span><br><span>la forêt</span>'|_ }}</a>
                 </div>
-                <div class="grid-fourth">
+                <div class="grid-third">
                     <a class="home-cta" id="cycle" href="{{ 'cycle'|page }}">{{ '<span>Le parcours</span><br><span>de l’arbre</span>'|_ }}</a>
-                </div>
-                <div class="grid-fourth">
-                    <a class="home-cta" id="workers" href="{{ 'workers'|page }}">{{ '<span>Destination</span><br><span>travailleurs</span>'|_ }}</a>
                 </div>
             </div>
             <div class="row">
