--- a/themes/cifq/pages/notre-foret.htm
+++ b/themes/cifq/pages/notre-foret.htm
@@ -21,6 +21,9 @@ is_hidden = 0
             {{ form_text('testimonials') }}
             {{ form_text('email') }}
 
+            {{ form_checkbox('subscribed') }}
+
+
             {{ form_file('photo') }}
 
             {{ form_token() }}
