--- a/themes/cifq/pages/forest.htm
+++ b/themes/cifq/pages/forest.htm
@@ -42,23 +42,27 @@ localeUrl[en] = "/forest"
 
     </div>
 
+
     <div class="content intro" style="background-image: url('{{ imgPath }}/foret-intro-pattern.jpg')">
         <div class="container">
             <div class="grid-full intro">
 
               <h1>NOS FORÊTS,<br>NOTRE FORCE COLLECTIVE.</h1>
-              <p>Nous sommes plus de 50 organisations d’horizons diversifiés, enracinées sur tout le territoire québécois.<br>
-                Nous sommes des témoins privilégiés de la vitalité et de la diversité des possibilités qu’offrent nos forêts.<br>
-                Nous reconnaissons que l’aménagement de nos forêts est ancré dans les principes du développement durable, afin<br>
-                d’offrir aux générations de demain les avantages environnementaux, économiques et sociaux qu’elles procurent.<br>
-                Nous constatons que nos forêts sont partagées respectueusement entre ses différents usagers.<br>
-                Nous sommes emballés par le consensus scientifique à l’effet que nos forêts, et les produits qu’elle nous <br>
-                permet de développer, sont  avantageux pour améliorer le bilan carbone mondial.<br>
-                Nous sommes engagés pour que nos forêts jouent un rôle encore plus grand, au service de la collectivité québécoise.<br>
-                Nous nous unissons au bénéfice des forêts québécoises.<br>
-                Nos forêts, nous y croyons.<br>
-                Nous sommes le Collectif pour une forêt durable.</p>
+              <p>Nous sommes plus de 50 organisations d’horizons diversifiés, enracinées sur tout le territoire québécois.<br><br>
+                Nous sommes des témoins privilégiés de la vitalité et de la diversité des possibilités qu’offrent nos forêts.<br><br>
+                Nous reconnaissons que l’aménagement de nos forêts est ancré dans les principes du développement durable, afin<br><br>
+                d’offrir aux générations de demain les avantages environnementaux, économiques et sociaux qu’elles procurent.<br><br>
+                Nous constatons que nos forêts sont partagées respectueusement entre ses différents usagers.<br><br>
+                Nous sommes emballés par le consensus scientifique à l’effet que nos forêts, et les produits qu’elle nous <br><br>
+                permet de développer, sont  avantageux pour améliorer le bilan carbone mondial.<br><br>
+                Nous sommes engagés pour que nos forêts jouent un rôle encore plus grand, au service de la collectivité québécoise.<br><br>
+                Nous nous unissons au bénéfice des forêts québécoises.<br><br>
+                Nos forêts, nous y croyons.<br><br>
+                Nous sommes le Collectif pour une forêt durable.</p><br>
+
+                <img class="collectif-logo" src="{{ imgPath }}/collectif.png" />
             </div>
+
         </div>
     </div>
 
@@ -73,6 +77,16 @@ localeUrl[en] = "/forest"
 
     <div class="content form" style="background-image: url('{{ imgPath }}/forest-bloc/forest.png')">
         <div class="container">
+            <div class="row why-container">
+              <div class="grid-third">
+                <span class="why">Pourquoi y croire ?</span>
+              </div>
+              <div class="grid-third line">
+              </div>
+              <div class="grid-third">
+                <span class="know-that">Saviez-vous que ...</span>
+              </div>
+            </div>
             <div class="row">
 
               <div class="grid-third">
@@ -80,7 +94,7 @@ localeUrl[en] = "/forest"
                       <img src="{{ imgPath }}/forest-bloc/forest-card-1.png" />
                   </div>
 
-                  <div class="intro">
+                  <div class="intro ">
                       <p>50% du territoire québécois est recouvert de forêt</p>
                   </div>
               </div>
