--- a/themes/cifq/pages/forest.htm
+++ b/themes/cifq/pages/forest.htm
@@ -5,6 +5,125 @@ layout = "default"
 
 [viewBag]
 localeUrl[en] = "/forest"
+
+[localePicker]
+forceUrl = 1
+==
+<?php
+use RainLab\Translate\Classes\Translator;
+
+function onStart()
+{
+    $this['pageClass'] = 'page-nosforets';
+
+    $this->translator = Translator::instance();
+    $locale = $this->translator->getLocale();
+
+    if ($locale == "fr") {
+        $this['header'] = [
+          'intro' => 'Plus vertes que jamais, nos forêts sont source de fierté et d’innovations.
+          Elles représentent près de 50 % de notre territoire et méritent 100 % de notre appui.',
+          'more' => 'En savoir plus'
+        ];
+
+        $this['statement'] = [
+          'title' => 'NOS FORÊTS,<br>NOTRE FORCE COLLECTIVE',
+          'description' => '
+          Nous sommes plus de 50 organisations d’horizons diversifiés, enracinées sur tout le territoire québécois.<br><br>
+          Nous sommes des témoins privilégiés de la vitalité et de la diversité des possibilités qu’offrent nos forêts.<br><br>
+          Nous reconnaissons que l’aménagement de nos forêts est ancré dans les principes du développement durable, afin d’offrir aux générations de demain les avantages environnementaux, économiques et sociaux qu’elles procurent.<br><br>
+          Nous constatons que nos forêts sont partagées respectueusement entre ses différents usagers.<br><br>
+          Nous sommes emballés par le consensus scientifique selon lequel nos forêts et les produits qu’elles nous permettent de développer sont avantageux pour améliorer le bilan carbone mondial.<br><br>
+          Nous sommes engagés pour que nos forêts jouent un rôle encore plus grand, au service de la collectivité québécoise.<br><br>
+          Nous nous unissons au bénéfice des forêts québécoises.<br><br>
+          Nos forêts, nous y croyons.<br><br>
+          Nous sommes le Collectif pour une forêt durable.<br><br>'
+        ];
+
+        $this['ambassador'] = [
+          'title' => 'Découvrez les multiples visages du Collectif pour une forêt durable'
+        ];
+
+        $this['facts'] = [
+          'header' => [
+            'why' => 'Pourquoi y croire ?',
+            'know' => 'Saviez-vous que...'
+          ],
+          'card1' => [
+            'label' => 'Près de 50 % du territoire québécois est recouvert de forêt'
+          ],
+          'card2' => [
+            'label' => 'Moins de 1 % du territoire forestier est récolté chaque année'
+          ],
+          'card3' => [
+            'label' => '80 % des forêts se régénèrent naturellement'
+          ]
+        ];
+
+        $this['quiz'] = [
+          'knowledge' => [
+            'title' => 'Vérifiez vos connaissances!',
+            'description' => 'Êtes-vous un bûcheron dans l’âme ou plutôt un forestier de salon?  Testez votre niveau de connaissance de la forêt québécoise avec ces miniquiz!'
+          ],
+          'button' => [
+            'label' => 'Faites le test'
+          ]
+        ];
+
+    } else if ($locale == "en") {
+      $this['header'] = [
+        'intro' => 'Plus vertes que jamais, nos forêts sont source de fierté et d’innovations.
+        Elles représentent près de 50 % de notre territoire et méritent 100 % de notre appui.',
+        'more' => 'En savoir plus'
+      ];
+
+      $this['statement'] = [
+        'title' => 'NOS FORÊTS,<br>NOTRE FORCE COLLECTIVE',
+        'description' => '
+        Nous sommes plus de 50 organisations d’horizons diversifiés, enracinées sur tout le territoire québécois.<br><br>
+        Nous sommes des témoins privilégiés de la vitalité et de la diversité des possibilités qu’offrent nos forêts.<br><br>
+        Nous reconnaissons que l’aménagement de nos forêts est ancré dans les principes du développement durable, afin d’offrir aux générations de demain les avantages environnementaux, économiques et sociaux qu’elles procurent.<br><br>
+        Nous constatons que nos forêts sont partagées respectueusement entre ses différents usagers.<br><br>
+        Nous sommes emballés par le consensus scientifique selon lequel nos forêts et les produits qu’elles nous permettent de développer sont avantageux pour améliorer le bilan carbone mondial.<br><br>
+        Nous sommes engagés pour que nos forêts jouent un rôle encore plus grand, au service de la collectivité québécoise.<br><br>
+        Nous nous unissons au bénéfice des forêts québécoises.<br><br>
+        Nos forêts, nous y croyons.<br><br>
+        Nous sommes le Collectif pour une forêt durable.<br><br>'
+      ];
+
+      $this['ambassador'] = [
+        'title' => 'Découvrez les multiples visages du Collectif pour une forêt durable'
+      ];
+
+      $this['facts'] = [
+        'header' => [
+          'why' => 'Pourquoi y croire ?',
+          'know' => 'Saviez-vous que...'
+        ],
+        'card1' => [
+          'label' => 'Près de 50 % du territoire québécois est recouvert de forêt'
+        ],
+        'card2' => [
+          'label' => 'Moins de 1 % du territoire forestier est récolté chaque année'
+        ],
+        'card3' => [
+          'label' => '80 % des forêts se régénèrent naturellement'
+        ]
+      ];
+
+      $this['quiz'] = [
+        'knowledge' => [
+          'title' => 'Vérifiez vos connaissances!',
+          'description' => 'Êtes-vous un bûcheron dans l’âme ou plutôt un forestier de salon?  Testez votre niveau de connaissance de la forêt québécoise avec ces miniquiz!'
+        ],
+        'button' => [
+          'label' => 'Faites le test'
+        ]
+      ];
+
+    }
+}
+?>
 ==
 
 {% set imgPath = '/themes/cifq/assets/public/images' %}
@@ -21,12 +140,7 @@ localeUrl[en] = "/forest"
                     </div>
 
                     <div class="intro">
-                        <p>Notre forêt est en santé et plus vivante que jamais.<br />
-                        Il est temps de démontrer aux Québécois, autant des villes que des régions, que le secteur forestier participe non seulement à l’économie, mais aussi à mettre
-                        en place des solutions d’avenir durables et profitables à tous.</p>
-
-                        <p>Le Collectif pour une forêt durable invite tous les travailleurs, partenaires et communautés aux quatres coins du Québec à signer le message « Notre forêt »
-                        afin de témoigner de ses multiples possibilités.</p>
+                        <p>{{ header.intro }}</p>
                     </div>
                 </div>
             </div>
@@ -35,41 +149,24 @@ localeUrl[en] = "/forest"
 
         <div class="mouse-scroll">
             <div><img src="{{ imgPath }}/mouse-scroll.png" class="scroll" /></div>
-            <span>En savoir plus</span>
+            <span>{{ header.more }}</span>
         </div>
-
-
-
     </div>
-
 
     <div class="content intro" style="background-image: url('{{ imgPath }}/foret-intro-pattern.jpg')">
         <div class="container">
             <div class="grid-full intro">
-
-              <h1>NOS FORÊTS,<br>NOTRE FORCE COLLECTIVE.</h1>
-              <p>Nous sommes plus de 50 organisations d’horizons diversifiés, enracinées sur tout le territoire québécois.<br><br>
-                Nous sommes des témoins privilégiés de la vitalité et de la diversité des possibilités qu’offrent nos forêts.<br><br>
-                Nous reconnaissons que l’aménagement de nos forêts est ancré dans les principes du développement durable, afin<br><br>
-                d’offrir aux générations de demain les avantages environnementaux, économiques et sociaux qu’elles procurent.<br><br>
-                Nous constatons que nos forêts sont partagées respectueusement entre ses différents usagers.<br><br>
-                Nous sommes emballés par le consensus scientifique à l’effet que nos forêts, et les produits qu’elle nous <br><br>
-                permet de développer, sont  avantageux pour améliorer le bilan carbone mondial.<br><br>
-                Nous sommes engagés pour que nos forêts jouent un rôle encore plus grand, au service de la collectivité québécoise.<br><br>
-                Nous nous unissons au bénéfice des forêts québécoises.<br><br>
-                Nos forêts, nous y croyons.<br><br>
-                Nous sommes le Collectif pour une forêt durable.</p><br>
-
+                <h1>{{ statement.title|raw }}</h1>
+                <p>{{ statement.description|raw  }}<br>
                 <img class="collectif-logo" src="{{ imgPath }}/collectif.png" />
             </div>
-
         </div>
     </div>
 
     <div class="content before-form">
         <div class="container">
             <div class="grid-full">
-                <p>Lorem Ipsum</p>
+                <p>{{ ambassador.title }}</p>
             </div>
         </div>
         <div class="arrow-down"></div>
@@ -79,12 +176,12 @@ localeUrl[en] = "/forest"
         <div class="container">
             <div class="row why-container">
               <div class="grid-third">
-                <span class="why">Pourquoi y croire ?</span>
+                <span class="why">{{ facts.header.why }}</span>
               </div>
               <div class="grid-third line">
               </div>
               <div class="grid-third">
-                <span class="know-that">Saviez-vous que ...</span>
+                <span class="know-that">{{ facts.header.know }}</span>
               </div>
             </div>
             <div class="row">
@@ -95,7 +192,7 @@ localeUrl[en] = "/forest"
                   </div>
 
                   <div class="intro ">
-                      <p>50% du territoire québécois est recouvert de forêt</p>
+                      <p>{{ facts.card1.label }}</p>
                   </div>
               </div>
 
@@ -105,7 +202,7 @@ localeUrl[en] = "/forest"
                   </div>
 
                   <div class="intro">
-                      <p>80% des forêts se régénèrent naturellement</p>
+                      <p>{{ facts.card2.label }}</p>
                   </div>
               </div>
 
@@ -115,7 +212,7 @@ localeUrl[en] = "/forest"
                   </div>
 
                   <div class="intro">
-                      <p>Moins de 1% du territoire forestier est récolté chaque année</p>
+                      <p>{{ facts.card3.label }}</p>
                   </div>
               </div>
 
@@ -130,14 +227,14 @@ localeUrl[en] = "/forest"
           </div>
 
           <div class="grid-third green-block-knowledge">
-              <h1>Vérifier vos connaissances</h1>
-              <p>Êtes-vous un bûcheron dans l’âme ou plutôt un forestier de salon?  Testez votre niveau de connaissance de la forêt québécoise avec ces miniquiz!</p>
+              <h1>{{ quiz.knowledge.title }}</h1>
+              <p>{{ quiz.knowledge.description }}</p>
           </div>
 
           <div class="grid-third green-block-quiz-wrapper">
               <div class="quiz-btn">
                 <a href="https://uneforetdepossibilites.com/fr/conservation-des-forets-et-de-la-nature/quiz-sur-la-sylviculture" target="_blank">
-                  <span class="quiz-btn-text">FAITES LE TEST</span>
+                  <span class="quiz-btn-text">{{ quiz.button.label }}</span>
                   <img src="{{ imgPath }}/quiz/arrow.png" alt="">
                 </a>
               </div>
