Fix green block

--- a/themes/cifq/pages/forest.htm
+++ b/themes/cifq/pages/forest.htm
@@ -66,7 +66,7 @@ function onStart()
             'description' => 'Êtes-vous un bûcheron dans l’âme ou plutôt un forestier de salon?  Testez votre niveau de connaissance de la forêt québécoise avec ces miniquiz!'
           ],
           'button' => [
-            'label' => 'Faites le test'
+            'label' => 'FAITES LE TEST'
           ]
         ];
 
@@ -174,7 +174,7 @@ function onStart()
           'description' => 'Êtes-vous un bûcheron dans l’âme ou plutôt un forestier de salon?  Testez votre niveau de connaissance de la forêt québécoise avec ces miniquiz!'
         ],
         'button' => [
-          'label' => 'Faites le test'
+          'label' => 'FAITES LE TEST'
         ]
       ];
 
@@ -222,7 +222,7 @@ function onStart()
 
     <div class="content before-form">
         <div class="container">
-            <div class="grid-full">
+            <div class="grid-full green-block">
                 <p>{{ ambassador.title }}</p>
             </div>
         </div>
