--- a/themes/cifq/pages/forest.htm
+++ b/themes/cifq/pages/forest.htm
@@ -195,6 +195,15 @@ function onStart()
 <div id="page-nosforets">
 
     <div class="header" style="background-image: url('{{ imgPath }}/new_header_home.png')">
+
+        <div class="video-background">
+            <div class="video-foreground">
+            <iframe src="https://www.youtube.com/embed/gzKxCVNmQv0?controls=0&showinfo=0&rel=0&autoplay=1&loop=1&playlist=W0LHTWG-UmQ&mute=1" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
+
+
+
         <div class="container">
             <div class="row">
                 <div class="grid-full">
