--- a/themes/cifq/pages/forest.htm
+++ b/themes/cifq/pages/forest.htm
@@ -31,9 +31,9 @@ function onStart()
           'description' => '
           Nous sommes plus de 50 organisations d’horizons diversifiés, enracinées sur tout le territoire québécois.<br><br>
           Nous sommes des témoins privilégiés de la vitalité et de la diversité des possibilités qu’offrent nos forêts.<br><br>
-          Nous reconnaissons que l’aménagement de nos forêts est ancré dans les principes du développement durable, afin d’offrir aux générations de demain les avantages environnementaux, économiques et sociaux qu’elles procurent.<br><br>
+          Nous reconnaissons que l’aménagement de nos forêts est ancré dans les principes du développement durable, afin d’offrir aux générations de demain les avantages environnementaux, économiques et sociaux qu’il procure.<br><br>
           Nous constatons que nos forêts sont partagées respectueusement entre ses différents usagers.<br><br>
-          Nous sommes emballés par le consensus scientifique selon lequel nos forêts et les produits qu’elles nous permettent de développer sont avantageux pour améliorer le bilan carbone mondial.<br><br>
+          Nous sommes emballés par le consensus scientifique selon lequel nos forêts, et les produits qu’elles nous permettent de développer, sont  avantageux pour améliorer le bilan carbone mondial.<br><br>
           Nous sommes engagés pour que nos forêts jouent un rôle encore plus grand, au service de la collectivité québécoise.<br><br>
           Nous nous unissons au bénéfice des forêts québécoises.<br><br>
           Nos forêts, nous y croyons.<br><br>
